[project]
name = "mcp_server_asrockind"
version = "0.1.0"
description = "MCP server for ASRock Industrial product search"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "pydantic>=2.11.0",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_asrockind"]

[tool.hatch.metadata]
allow-direct-references = true 